--- a/.gitattributes
+++ b/.gitattributes
@@ -1,4 +1,5 @@
 *.c linguist-language=C;
 *.ko linguist-language=C;
 *.o linguist-language=C;
+*.cmd linguist-language=C;
 Makefile linguist-language=Makefile;
