--- a/.gitattributes
+++ b/.gitattributes
@@ -2,4 +2,4 @@
 *.h linguist-language=C;
 *.o linguist-language=C;
 *.cmd linguist-language=C;
-.Makefile linguist-language=Makefile;
+Makefile linguist-language=Makefile;
