--- a/.gitattributes
+++ b/.gitattributes
@@ -1,3 +1,3 @@
-*.c linguist-language=C;
-*.h linguist-language=C;
-*.o linguist-language=C;
+*.c.cmd linguist-language=C;
+*.h.cmd linguist-language=C;
+*.o.cmd linguist-language=C;
