--- a/.gitattributes
+++ b/.gitattributes
@@ -1,3 +1,3 @@
-*.c.cmd linguist-language=C;
-*.h.cmd linguist-language=C;
 *.o.cmd linguist-language=C;
+*.ko.cmd linguist-language=C;
+*.mod.cmd linguist-language=C;
